# LIDAR-OccupancyGrid

./: README.md  Report.odt  goal.txt  matrix.txt  matrixnode.cpp
RA3/: CMakeLists.txt  package.xml
RA3/scripts/: extract.py  gridmake.py  matrix0.txt  matrix1.txt  matrix10.txt  matrix100.txt  matrix101.txt  matrix102.txt  matrix11.txt  matrix12.txt  matrix13.txt  matrix14.txt  matrix15.txt  matrix16.txt  matrix17.txt  matrix18.txt  matrix19.txt  matrix2.txt  matrix20.txt  matrix21.txt  matrix22.txt  matrix23.txt  matrix24.txt  matrix25.txt  matrix26.txt  matrix27.txt  matrix28.txt  matrix29.txt  matrix3.txt  matrix30.txt  matrix31.txt  matrix32.txt  matrix33.txt  matrix34.txt  matrix35.txt  matrix36.txt  matrix37.txt  matrix38.txt  matrix39.txt  matrix4.txt  (+67 more)
RA3/src/: matrixnode.cpp  subscriber.cpp
